--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,22 @@ a {
   color: var(--tertiary-color);
 }
 
+.left-arrow {
+  position: absolute;
+  top: 254px;
+  left: 10px;
+}
+
+.fa-angle-left {
+  color: var(--tertiary-color);
+  font-size: 3rem;
+  background: var(--secondary-color);
+  border-radius: 50%;
+  opacity: 0.75;
+  padding: 6px 13.5px;
+  border: 2px solid var(--tertiary-color);
+}
+
 .right-arrow {
   position: absolute;
   top: 254px;
