--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --primary-color: #ec167e;
-  --secondary-color: #fff;
+  --secondary-color: #ffeef6;
   --secondary-color-op: rgba(255, 255, 255, 0.8);
   --tertiary-color: #7C318F;
   --primary-font: 'Roboto', sans-serif;
